# task2.1_dll

./: CMakeLists.txt  README.md
mydll/: CMakeLists.txt
mydll/mysin_dll/: CMakeLists.txt  sin_library.cpp  sin_library.h
mydll/mysort_dll/: CMakelists.txt  sorty_library.cpp  sorty_library.h
mydll/tests/: CMakelists.txt  include_header.hpp  tests.cpp
